--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,16 @@ description: A Machine Learning,Deep Learning and Robotics Enthusiast Doing Rand
 navbar-links:
   About Me: "aboutme"
   Projects:
-    - Autonomous Car: "Autonomouscar"
-    - Garbage Collector Robot: "GarbageCollectorRobot"
-    - Deep Chem fork: "DeepChem"
-    - Segnet fork: "Segnet"
-    - Raspberrypi related: "raspberrypi"
-    - Nvidia Jetson releated: "jetson"
+    - Autonomous RC Car: "https://github.com/dineshresearch/Autonomouscar"
+    - Capsule networks: "https://github.com/dineshresearch/Novel-Deep-Learning-Model-for-Traffic-Sign-Detection-Using-Capsule-Networks"
+  #  - Garbage Collector Robot: "GarbageCollectorRobot"
+ #   - Deep Chem fork: "DeepChem"
+ #   - Segnet fork: "Segnet"
+ #   - Raspberrypi related: "raspberrypi"
+  #  - Nvidia Jetson releated: "jetson"
+  Papers:
+    - 
+    - Novel Deep Learning Model for Traffic Sign Detection Using Capsule Networks:"https://arxiv.org/abs/1805.04424"
   #Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
