--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navbar-links:
   #  - Nvidia Jetson releated: "jetson"
   Papers:
    # - 
-    - Novel Deep Learning Model for Traffic Sign Detection Using Capsule Networks:"https://arxiv.org/abs/1805.04424"
+    - Capsule Networks: "https://arxiv.org/abs/1805.04424"
   #Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
