--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,11 @@ navbar-links:
  #   - Segnet fork: "Segnet"
  #   - Raspberrypi related: "raspberrypi"
   #  - Nvidia Jetson releated: "jetson"
-  Papers:
-   # - 
+  Papers: 
     - Capsule Networks: "https://arxiv.org/abs/1805.04424"
+  Other Blogs:
+    - Medium: "https://medium.com/@dineshkumaramara"
+   
   #Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
